trzeba szukac dalej

--- a/models.ipynb
+++ b/models.ipynb
@@ -117,6 +117,7 @@
     "import lightgbm as lgb\n",
     "import optuna\n",
     "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
     "\n",
     "\n",
     "def define_lightgbm_model(trial):\n",
@@ -128,7 +129,7 @@
     "        'learning_rate': trial.suggest_float('learning_rate', 6e-3, 5e-2, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
-    "        'subsample': trial.suggest_float('subsample', 0.4, 1.0, log=True),\n",
+    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.4, 1.0, log=True),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 1.0, log=True),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 250),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 5.0, log=True),\n",
@@ -142,8 +143,9 @@
     "\n",
     "def objective_lightgbm(trial):\n",
     "    model = define_lightgbm_model(trial)\n",
-    "    model.fit(X_train, y_train)\n",
-    "    return root_mean_squared_error(y_test, model.predict(X_test))"
+    "    kf = KFold(n_splits=10, random_state=4, shuffle=True)\n",
+    "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    return scores.mean() * (-1)"
    ],
    "id": "e0c6cfa75b097d58",
    "outputs": [],
@@ -172,7 +174,7 @@
    "source": [
     "lgb_model = define_lightgbm_model(study_lightgbm.best_trial)\n",
     "lgb_model.fit(X, y)\n",
-    "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'random_state']\n",
+    "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'bagging_fraction', 'colsample_bytree', 'min_data_in_leaf', 'random_state']\n",
     "lgb_pred = lgb_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, lgb_pred)"
    ],
@@ -193,7 +195,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "# LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=10, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "528e272d6b0016a0",
    "outputs": [],
@@ -333,6 +335,20 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "### <center>Optuna + CatBoost</center>",
+   "id": "90efbae932d08aad"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "import catboost as cat",
+   "id": "ca4234a745c21357",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "### <center>Optuna + XGBoost</center>",
    "id": "6b133f35295134be"
   },
@@ -363,8 +379,9 @@
     "\n",
     "def objective_xgb(trial):\n",
     "    model = define_xgb_model(trial)\n",
-    "    model.fit(X_train, y_train)\n",
-    "    return root_mean_squared_error(y_test, model.predict(X_test))"
+    "    kf = KFold(n_splits=5, random_state=4, shuffle=True)\n",
+    "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    return scores.mean() * (-1)"
    ],
    "id": "1c600a7c761cd5d5",
    "outputs": [],
@@ -374,8 +391,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler())\n",
-    "study_xgboost.optimize(objective_xgb, n_trials=100)"
+    "study_xgb = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler())\n",
+    "study_xgb.optimize(objective_xgb, n_trials=100)"
    ],
    "id": "67783466ebd7e557",
    "outputs": [],
@@ -391,10 +408,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "xgb_model = define_xgb_model(study_xgboost.best_trial)\n",
+    "xgb_model = define_xgb_model(study_xgb.best_trial)\n",
     "\n",
     "xgb_model.fit(X, y)\n",
-    "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'learning_rate', 'max_depth', 'colsample_bytree']\n",
+    "xgb_params = ['n_estimators', 'subsample', 'reg_lambda', 'learning_rate', 'max_depth', 'colsample_bytree']\n",
     "xgb_pred = xgb_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, xgb_pred)"
    ],
@@ -415,7 +432,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "# LearningCurveDisplay.from_estimator(xgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "LearningCurveDisplay.from_estimator(xgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "f50472f99612e67c",
    "outputs": [],
@@ -430,7 +447,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.matplotlib.plot_optimization_history(study_xgboost)",
+   "source": "optuna.visualization.matplotlib.plot_optimization_history(study_xgb)",
    "id": "874d08b1ec57ed14",
    "outputs": [],
    "execution_count": null
@@ -444,7 +461,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.matplotlib.plot_slice(study_xgboost, params=xgboost_params)",
+   "source": "optuna.visualization.matplotlib.plot_slice(study_xgb, params=xgb_params)",
    "id": "9d180a1a7efb53f0",
    "outputs": [],
    "execution_count": null
@@ -458,7 +475,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.matplotlib.plot_param_importances(study_xgboost)",
+   "source": "optuna.visualization.matplotlib.plot_param_importances(study_xgb)",
    "id": "b395fc81efef55f",
    "outputs": [],
    "execution_count": null
@@ -472,7 +489,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "study_xgboost.best_params",
+   "source": "study_xgb.best_params",
    "id": "a0e39eb9edeebe48",
    "outputs": [],
    "execution_count": null
