--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -27,28 +27,22 @@
    "cell_type": "code",
    "source": [
     "train = pd.read_csv(os.path.join('data', 'train.csv'))\n",
-    "train_additional = pd.read_csv(os.path.join('data', 'train_layer.csv'))\n",
     "test = pd.read_csv(os.path.join('data', 'test.csv'))\n",
+    "# train_additional = pd.read_csv(os.path.join('data', 'train_layer.csv'))\n",
     "\n",
-    "train.info()"
+    "# train_additional.info()"
    ],
-   "id": "ce58a6da1ddd875d",
+   "id": "ff47ed9db9745c15",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "train_additional.info()",
-   "id": "515b618d3712eac7",
+   "source": "train.info()",
+   "id": "ce58a6da1ddd875d",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Przygotuj dodatkowe dane treningowe",
-   "id": "b7a2704db3c9413b"
   },
   {
    "metadata": {},
@@ -62,43 +56,28 @@
    "source": [
     "def change_date(dataframe, sin_cos=True):\n",
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
-    "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek\n",
-    "    dataframe['week'] = dataframe['date'].dt.isocalendar().week\n",
-    "    if 'month' in dataframe.columns:\n",
-    "        dataframe['month'] = dataframe['month']\n",
-    "    else:\n",
-    "        dataframe['month'] = dataframe['date'].dt.month\n",
-    "    if sin_cos:\n",
-    "        dataframe['sin_dayofweek'] = np.sin(2 * np.pi * dataframe['dayofweek'] / 7)\n",
-    "        dataframe['cos_dayofweek'] = np.cos(2 * np.pi * dataframe['dayofweek'] / 7)\n",
-    "        dataframe['sin_week'] = np.sin(2 * np.pi * dataframe['week'] / 52)\n",
-    "        dataframe['cos_week'] = np.cos(2 * np.pi * dataframe['week'] / 52)\n",
-    "        dataframe['sin_month'] = np.sin(2 * np.pi * dataframe['month'] / 12)\n",
-    "        dataframe['cos_month'] = np.cos(2 * np.pi * dataframe['month'] / 12)\n",
+    "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek.astype(np.int64)\n",
+    "    dataframe['week'] = dataframe['date'].dt.isocalendar().week.astype(np.int64)\n",
+    "    dataframe['year'] = dataframe['date'].dt.year.astype(np.int64)\n",
+    "    if 'month' not in dataframe.columns:\n",
+    "        dataframe['month'] = dataframe['date'].dt.month.astype(np.int64)\n",
+    "    # if sin_cos:\n",
+    "    #     dataframe['sin_dayofweek'] = np.sin(2 * np.pi * dataframe['dayofweek'] / 7)\n",
+    "    #     dataframe['cos_dayofweek'] = np.cos(2 * np.pi * dataframe['dayofweek'] / 7)\n",
+    "    #     dataframe['sin_week'] = np.sin(2 * np.pi * dataframe['week'] / 52)\n",
+    "    #     dataframe['cos_week'] = np.cos(2 * np.pi * dataframe['week'] / 52)\n",
+    "    #     dataframe['sin_month'] = np.sin(2 * np.pi * dataframe['month'] / 12)\n",
+    "    #     dataframe['cos_month'] = np.cos(2 * np.pi * dataframe['month'] / 12)\n",
     "        \n",
     "    return dataframe\n",
     "\n",
     "\n",
-    "train, test, train_additional = change_date(train), change_date(test), change_date(train_additional)"
+    "train, test = change_date(train), change_date(test)\n",
+    "# train = train[(train['date'] >= test['date'].min()) & (train['date'] <= test['date'].max())]\n",
+    "# train.reset_index(drop=True, inplace=True)\n",
+    "# train_additional = change_date(train_additional)"
    ],
    "id": "8d2c1f67577a7d8e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Wykres przedstawiający jakość powietrza w krajach afrykańskich",
-   "id": "85edb84c8e895e99"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "sns.lineplot(data=train, x='date', y='pm2_5')\n",
-    "plt.title('Jakość powietrza w kolejnych dniach')"
-   ],
-   "id": "edbef352ee06ce32",
    "outputs": [],
    "execution_count": null
   },
@@ -162,8 +141,82 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.heatmap(train[['month', 'dayofweek', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'pm2_5']].corr(), annot=True, cmap='Greys')",
+   "source": "sns.heatmap(train[['month', 'week', 'dayofweek', 'year', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'pm2_5']].corr(), annot=True, cmap='Greys')",
    "id": "d38b36ac602de2ef",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wykres przedstawiający wartości pm2_5 w poszczególnych miastach",
+   "id": "b1ae741b1f38f74d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "plt.figure(figsize=(14, 8))\n",
+    "sns.lineplot(data=train, x='date', y='pm2_5', hue='city')\n",
+    "plt.title('Jakość powietrza w kolejnych dniach')"
+   ],
+   "id": "82be217767d850b1",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wartości pm2_5 dla Lagos z podziałem na site_id",
+   "id": "7711c20595ed298b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "only_lagos = train[train['city'] == 'Lagos'][['site_id', 'pm2_5']]\n",
+    "\n",
+    "only_lagos.plot(kind='hist', x='site_id')"
+   ],
+   "id": "902609d563e3bb36",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Kolumna ozone_o3_effective_temperature",
+   "id": "7d44cd37e06dd943"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "train['ozone_o3_effective_temperature'].describe()",
+   "id": "1aa0e9c40dab5d5b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "ozone_o3_effective_temperature = train.loc[train['ozone_o3_effective_temperature'].isna(), ['city', 'week', 'dayofweek', 'month', 'pm2_5']].copy(deep=True)",
+   "id": "8809e4b5b04f8e06",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "ozone_o3_effective_temperature.groupby('city')['month'].value_counts()",
+   "id": "546456ca6493cec",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "train.groupby(['city', 'month'])['ozone_o3_effective_temperature'].mean()",
+   "id": "e2a0dada3f9334e9",
    "outputs": [],
    "execution_count": null
   },
@@ -229,25 +282,9 @@
     "        dataframe[f'{splitted[0]}_{splitted[1]}_diff'] = dataframe[zenith] - dataframe[azimuth_columns[i]]\n",
     "        dataframe.drop(zenith_columns[i], axis=1, inplace=True)\n",
     "        dataframe.drop(azimuth_columns[i], axis=1, inplace=True)\n",
-    "    return dataframe"
-   ],
-   "id": "4cf45820641da986",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "b37c0c27fc1028f1"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "test_ids = test['id']\n",
-    "train.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
+    "    return dataframe\n",
+    "\n",
+    "\n",
     "starts_with = train.columns.str.split('_', expand=True).levels[0].to_frame()\n",
     "starts_with.drop(['month', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
@@ -255,7 +292,7 @@
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "high_nans = drop_high_nans()\n",
     "train, test = train.drop(columns=high_nans, axis=1), test.drop(columns=high_nans, axis=1)\n",
-    "# fill_x(), fill_test()\n",
+    "# fill_train(), fill_test()\n",
     "# to_drop = drop_low_correlated_columns_to_pm2_5()\n",
     "# to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
     "# train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
@@ -263,7 +300,7 @@
     "\n",
     "train.info()"
    ],
-   "id": "cba91ead48820415",
+   "id": "4cf45820641da986",
    "outputs": [],
    "execution_count": null
   },
@@ -367,12 +404,18 @@
     "    indexes_to_drop = []\n",
     "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.99)\n",
     "    for i, el in enumerate(detect_outliers):\n",
-    "        if q1 < el > q2:\n",
+    "        if el > q2:\n",
     "            indexes_to_drop.append(i)\n",
     "    train.drop(indexes_to_drop, inplace=True)\n",
     "    train.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "def scale_pm2_5_outliers():\n",
+    "    out = train[zscore(train['pm2_5']) > np.quantile(detect_outliers, 0.99)]['pm2_5'].copy(deep=True)\n",
+    "    out *= 0.6\n",
+    "    train.loc[out.index, 'pm2_5'] = out\n",
     "\n",
     "\n",
+    "# scale_pm2_5_outliers()\n",
     "del_pm2_5_outliers()\n",
     "\n",
     "train.info()"
@@ -383,9 +426,34 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Usuwanie outlierów na podstawie rady marching_learning",
+   "id": "da5a062992a03500"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "train.head()",
-   "id": "51f8620d8a1e1e28",
+   "source": [
+    "joined = pd.merge(only_lagos, detect_outliers, left_index=True, right_index=True)\n",
+    "outliers_from_lagos = joined[joined['pm2_5_y'] > 3.0]['site_id'].value_counts()\n",
+    "site_ids_to_del = outliers_from_lagos.keys()[:2]\n",
+    "outliers_from_lagos"
+   ],
+   "id": "5f37ea49ec020e3c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# indexes = train[train['site_id'].isin(site_ids_to_del)].index\n",
+    "# train.drop(index=indexes, inplace=True)\n",
+    "# train.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# train.info()"
+   ],
+   "id": "c152f1e37847488a",
    "outputs": [],
    "execution_count": null
   },
@@ -465,26 +533,65 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, RobustScaler, TargetEncoder\n",
     "from sklearn.compose import make_column_transformer\n",
     "\n",
-    "train_pm2_5 = train['pm2_5']\n",
-    "train.drop(columns=['pm2_5'], inplace=True)\n",
-    "# Bez kategorycznych\n",
-    "# scale_columns = train.columns.difference(categorical)\n",
-    "# \n",
-    "# scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
-    "# \n",
-    "# train_cat, test_cat = train[categorical], test[categorical]\n",
-    "# \n",
-    "# train = pd.concat([pd.DataFrame(scaler.fit_transform(train[scale_columns]), columns=scaler.feature_names_in_), train_cat, train_pm2_5], axis=1)\n",
-    "# test = pd.concat([test_ids, pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
-    "# train = train.round(decimals=3)\n",
-    "# Wszystkie kolumny\n",
-    "scaler = StandardScaler()\n",
     "\n",
-    "train, test = scaler.fit_transform(train), scaler.transform(test)\n",
-    "train, test = pd.concat([pd.DataFrame(train, columns=scaler.feature_names_in_), train_pm2_5], axis=1), pd.concat([test_ids, pd.DataFrame(test, columns=scaler.feature_names_in_)], axis=1)"
+    "test_ids = test['id']\n",
+    "train.drop(columns=['id', 'city', 'date', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
+    "test.drop(columns=['id', 'city', 'date', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
+    "\n",
+    "train_pm2_5 = train['pm2_5']\n",
+    "train.drop(columns=['pm2_5'], inplace=True)"
+   ],
+   "id": "b588a29d657f3df7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Z podziałem na kategoryczne",
+   "id": "82aa10574502435d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "categorical = ['month', 'dayofweek', 'week', 'year']\n",
+    "train[categorical] = train[categorical].astype('category')\n",
+    "test[categorical] = test[categorical].astype('category')\n",
+    "\n",
+    "non_cat_columns = train.columns.difference(categorical)\n",
+    "\n",
+    "non_cat_scaler = make_column_transformer((RobustScaler(), non_cat_columns))\n",
+    "te = TargetEncoder(random_state=4)\n",
+    "\n",
+    "train_cat, test_cat = te.fit_transform(train[categorical], train_pm2_5), te.transform(test[categorical])\n",
+    "\n",
+    "train = pd.concat([pd.DataFrame(non_cat_scaler.fit_transform(train[non_cat_columns]), columns=non_cat_scaler.feature_names_in_), pd.DataFrame(train_cat, columns=te.feature_names_in_), train_pm2_5], axis=1)\n",
+    "test = pd.concat([test_ids, pd.DataFrame(non_cat_scaler.transform(test[non_cat_columns]), columns=non_cat_scaler.feature_names_in_), pd.DataFrame(test_cat, columns=te.feature_names_in_)], axis=1)\n",
+    "\n",
+    "# train = train.round(decimals=3)"
+   ],
+   "id": "cf6c24f2f6db0a83",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Wszystkie kolumny",
+   "id": "2dd23a2050be5bc9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# scaler = RobustScaler()\n",
+    "# \n",
+    "# train, test = scaler.fit_transform(train), scaler.transform(test)\n",
+    "# train, test = pd.concat([pd.DataFrame(train, columns=scaler.feature_names_in_), train_pm2_5], axis=1), pd.concat([test_ids, pd.DataFrame(test, columns=scaler.feature_names_in_)], axis=1)"
    ],
    "id": "initial_id",
    "outputs": [],
@@ -506,6 +613,24 @@
     "test.to_csv(os.path.join('transform', 'test.csv'), index=False)"
    ],
    "id": "6fe27a6a613d3b3a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Po prostu xd",
+   "id": "26cb836f54ab6642"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "xd = pd.read_csv(os.path.join('data', 'xd.csv'), header=0)\n",
+    "xd['pm2_5'] *= 1.03\n",
+    "xd.to_csv(os.path.join('data', 'xd1.csv'), index=False)"
+   ],
+   "id": "27b4bead0508e55f",
    "outputs": [],
    "execution_count": null
   }
