--- a/models.ipynb
+++ b/models.ipynb
@@ -341,8 +341,74 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "import catboost as cat",
+   "source": [
+    "from catboost import CatBoostRegressor\n",
+    "\n",
+    "\n",
+    "def define_cat_model(trial):\n",
+    "    params = {\n",
+    "        'iterations': trial.suggest_int('iterations', 100, 1000),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-5, 5e-2, log=True),\n",
+    "        'depth': trial.suggest_int('depth', 5, 15),\n",
+    "        'grow_policy': 'Depthwise',\n",
+    "        'l2_leaf_reg': trial.suggest_float('l2_leaf_reg', 1e-5, 5e-2, log=True),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.8, 0.9, log=True),\n",
+    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 200),\n",
+    "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
+    "    }\n",
+    "    return CatBoostRegressor(**params)\n",
+    "\n",
+    "def objective_cat(trial):\n",
+    "    model = define_cat_model(trial)\n",
+    "    kf = KFold(n_splits=10, random_state=4, shuffle=True)\n",
+    "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    return scores.mean() * (-1)"
+   ],
    "id": "ca4234a745c21357",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "study_cat = optuna.create_study(direction='minimize', study_name='AirQualityWithCatBoost', sampler=optuna.samplers.TPESampler())\n",
+    "study_cat.optimize(objective_cat, n_trials=100)"
+   ],
+   "id": "3678cdaea193ddb8",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "cat_model = define_lightgbm_model(study_lightgbm.best_trial)\n",
+    "cat_model.fit(X, y)\n",
+    "lightgbm_params = ['iterations', 'learning_rate', 'depth', 'l2_leaf_reg', 'subsample', 'min_data_in_leaf', 'random_state']\n",
+    "cat_pred = cat_model.predict(X_test)\n",
+    "root_mean_squared_error(y_test, cat_pred)"
+   ],
+   "id": "db253ddf635c602b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "study_cat.best_params",
+   "id": "4b6548117ddb04be",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "cat_final_pred = cat_model.predict(test.drop(columns='id', axis=1))\n",
+    "save_to_csv(cat_final_pred, 'catboost.csv')"
+   ],
+   "id": "6c4cd1665f3c229d",
    "outputs": [],
    "execution_count": null
   },
@@ -526,9 +592,9 @@
     "\n",
     "\n",
     "stack_model = StackingRegressor(\n",
-    "    estimators=[('lgb', lgb_model), ('xgb', xgb_model)],\n",
+    "    estimators=[('lgb', lgb_model), ('cat', cat_model)],\n",
     "    final_estimator=LinearRegression(),\n",
-    "    cv=5,\n",
+    "    cv=10,\n",
     "    n_jobs=-1,\n",
     "    passthrough=False\n",
     ").fit(X, y)"
@@ -546,7 +612,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(stack_model.predict(test.drop(columns=['id'], axis=1)), 'stack_xgb_lgb.csv')",
+   "source": "save_to_csv(stack_model.predict(test.drop(columns=['id'], axis=1)), 'stack_cat_lgb.csv')",
    "id": "9f21846de9642c71",
    "outputs": [],
    "execution_count": null
@@ -565,7 +631,7 @@
     "\n",
     "\n",
     "voting_model = VotingRegressor(\n",
-    "    estimators=[('lgb', lgb_model), ('xgb', xgb_model)],\n",
+    "    estimators=[('lgb', lgb_model), ('xgb', cat_model)],\n",
     "    n_jobs=-1\n",
     ").fit(X, y)"
    ],
@@ -582,7 +648,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(voting_model.predict(test.drop(columns=['id'], axis=1)), 'voting_xgb_lgb.csv')",
+   "source": "save_to_csv(voting_model.predict(test.drop(columns=['id'], axis=1)), 'voting_cat_lgb.csv')",
    "id": "d9e910710f09aef6",
    "outputs": [],
    "execution_count": null
